package com.savin.matchingservice.constants;

public class ControllerConstants {
    public static final String ROOT_PATH = "/api/matching-service/";
}