package com.savin.matchingservice.constants;

public class GlobalExceptionHandlerMessageConstants {
    public static final String BASE_MESSAGE = "Unexpected exception occurred. ";
    public static final String ENTITY_NOT_FOUND_MESSAGE = "Failed to find entity. ";
}
