package com.savin.matchingservice.enums;

public enum ActionType {
    CREATED,
    DELETED,
    UPDATED
}
